@@ -1,2 +1,7 @@
 # Welkom bij ons project!
 Dit is de opdracht van Programmeren 2 / Relationele Databases 2 van Aart, Lauran & Maurice
+
+## LET OP: Je hebt de volgende VM-options nodig:
+```
+-p "jouw sdk locatie javafx" --add-modules javafx.controls,javafx.fxml
+```
